2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: test empty title report before on
	submit in javascript, and test empty this title in PHP.
	Fixes: 2910627

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/db/db_info.php: Added icon to download database info.

	* include/style/tip.css: Removed unused style. Still help style is in
	the file. Not removed, maybe used some day...

	* operation/agentes/estado_grupo.php: Added colours to the numbers.
	Added the text "modules".

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* include/fgraph2.php: Deleted test file, never used. Will ezComponents
	graph be used someday...?

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: in function "create_user_profile" add the
	parameter $assignUser to set assign user in table. And add the function
	"get_db_num_rows" that return the num of rows get from SQL. 
	
	* include/functions_api.php: add functions for new calls in the API,
	"set_new_user" create new user, "set_delete_user" delete a user,
	"set_add_user_profile" attach a user into group and profile,
	"set_delete_user_profile" deattach a user into group and profile,
	"set_new_incident" add new incident, "set_new_note_incident" add into
	new note into incident.

2009-12-08  Raul Mateos  <raulofpandora@gmail.com>

	* include/auth/*.php: added style to error when accessing the files
	directly.

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fix style for to clean form in
	networkmap when active "No Overlap".
	Fixes: 2821967

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add in "get_db_all_rows_filter" new parameter
	$returnSQL for return the string formated SQL instead the data. And add new
	function "get_db_all_row_by_steps_sql" that return row by row the data of
	query.
	
	* operation/events/export_csv.php: fixed the memory overload when try save